# lora-serve

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  compose.yml
examples/: client_generate.py
examples/adapters/code/: README.md
k8s/: deployment.yaml  hpa.yaml  service.yaml
lora_serve/: app.py
lora_serve/api/: metrics.py  routes.py  schemas.py
lora_serve/core/: adapters.py  config.py  logging.py  metrics.py  model_registry.py  router.py  types.py
lora_serve/core/engines/: engine.py  hf_engine.py
lora_serve/decoding/: sampler.py  spec_decode.py  stream.py
lora_serve/kv_cache/: allocator.py  manager.py
lora_serve/metrics/: prometheus.py
lora_serve/scheduler/: batcher.py  policies.py  queue.py
lora_serve/security/: auth.py
lora_serve/storage/: cache_store.py  files.py
scripts/: bench_local.sh
tests/: conftest.py  test_api.py  test_hf_engine.py
tools/: make_fake_adapters.py
